force-app/main/default/objects/Repair_Quote_Line_Item__c/Repair_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Repair Quote Line Item</label>
    <nameField>
        <label>Repair Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>