force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/ApprovedTime__c.field-meta.xml
<CustomField>
    <fullName>ApprovedTime__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Approved Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>