force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/AssessmentOpinion__c.field-meta.xml
<CustomField>
    <fullName>AssessmentOpinion__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Assessment Opinion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>