force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Discount_in_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_Percentage__c</fullName>
    <description>User Story: 1015
Neha Aggrawal</description>
    <label>Discount in Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>