force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>