force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>