force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/fm_Amount__c.field-meta.xml
<CustomField>
    <fullName>fm_Amount__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <formula>IF(TEXT(LineItemType__c) == &quot;Labor&quot;, Hours__c * ListPrice__c * Quantity__c,
IF(TEXT(LineItemType__c) == &quot;Part&quot;, ListPrice__c * Quantity__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>