force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyundai Marine&amp;Fire Insurance</fullName>
            </value>
            <value>
                <fullName>Samsung Life Insurance</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Hanhwa Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>