force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IssueType</valueSetName>
    </valueSet>
</CustomField>