force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Repair Quote Line Items (Labor)</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>