force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/LaborTypeRate__c.field-meta.xml
<CustomField>
    <fullName>LaborTypeRate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Labor rate to be applied for this specific work line item
GD-1014 , GD-1966, GD-2465</description>
    <label>Labor Type Rate</label>
    <referenceTo>LaborTypeRate__c</referenceTo>
    <relationshipLabel>Repair Quote Line Items</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>