force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_Item_Type</valueSetName>
    </valueSet>
</CustomField>