force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <displayFormat>QL-{YYYY}{MM}-{0000}</displayFormat>
    <label>No</label>
    <type>AutoNumber</type>
</CustomField>