force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Repair Quote Line Items</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>