force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Quantity Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>