force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <description>Story: 1533
Neha Aggrawal</description>
    <formula>&quot;/lightning/r/Repair_Quote_Line_Item__c/&quot;&amp; Id&amp;&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>