force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Repair_Quote_Section__c.field-meta.xml
<CustomField>
    <fullName>Repair_Quote_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Story: 1015
Created by: Neha Aggrawal</description>
    <label>Repair Quote Section</label>
    <referenceTo>Repair_Quote_Section__c</referenceTo>
    <relationshipLabel>Repair Quote Line Items</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>