force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/RepairQuote__c.field-meta.xml
<CustomField>
    <fullName>RepairQuote__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Repair Quote</label>
    <referenceTo>RepairQuote__c</referenceTo>
    <relationshipLabel>Repair Quote Line Items</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>