force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/SubmittedAmount__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAmount__c</fullName>
    <description>created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Submitted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>