force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/Total_Price_VAT_excluded__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_VAT_excluded__c</fullName>
    <description>User Story: 1015
Neha Aggrawal</description>
    <formula>( (ListPrice__c * Quantity__c )*(1- Discount_in_Percentage__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (VAT excluded)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>