force-app/main/default/objects/Repair_Quote_Line_Item__c/fields/VehicleServicePackageItem__c.field-meta.xml
<CustomField>
    <fullName>VehicleServicePackageItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By : Shashikant Bagale 
Created Date : 14/1/2020
This field will capture the vehicle service line item for the selected at the time of Repair Quote.This field is created as part of user story GD-1014.</description>
    <label>Vehicle Service Package Item</label>
    <referenceTo>Vehicle_Service_Package_Item__c</referenceTo>
    <relationshipLabel>Repair Quote Line Items</relationshipLabel>
    <relationshipName>Repair_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>