force-app/main/default/objects/Repair_Quote_Line_Item__c/recordTypes/Labor_Repair_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Labor_Repair_Quote_Line_Item</fullName>
    <active>true</active>
    <description>Created by :- Riddhi Mittal for creating only Labor(Product) in Repair Quote Line Item</description>
    <label>Labor Repair Quote Line Item</label>
</RecordType>