force-app/main/default/objects/Repair_Quote_Line_Item__c/recordTypes/Part_Repair_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Part_Repair_Quote_Line_Item</fullName>
    <active>true</active>
    <description>Created by :- Riddhi Mittal for creating only Part(Product) in Repair Quote Line Item</description>
    <label>Part Repair Quote Line Item</label>
</RecordType>